--- a/pages/component/category/category.wxml
+++ b/pages/component/category/category.wxml
@@ -5,61 +5,27 @@
   <view class="categroy-top bg_color">
     <view class="categroy-fir-list" wx:for="{{goods}}" wx:for-item="first_level"  data-index="{{index}}">
       <view class="categroy-fir-list-name">
-        <view class="navigator-text">{{first_level.first_level_category}}</view>
+        <view class="navigator-text">产品分类</view>
         <view class="navigator-arrow"></view>
       </view>
       <view class="categroy-sec-list">
-        <view wx:for="{{first_level.content}}" wx:for-item="second_level" data-sec_id="{{second_level.sec_ord}}" url="second_level.url" class="categroy-sec-list-name" data-fir_id="{{first_level.fir_ord}}" bindtap="switchTab">
-          <!--<text>{{second_level.second_level_category}}</text>-->
-          {{second_level.second_level_category}}
+        <view wx:for="{{category}}" data-id="{{item.id}}" url="second_level.url" class="categroy-sec-list-name"  bindtap="switchTab">
+          
+          {{item.name}}
         </view>
       </view>
     </view>
   </view>
   <view class="categroy-bottom">
     <view class="good-all">
-      <view wx:for="{{goods[curFirIndex].content[curSecIndex].good}}" wx:for-item="good" class="good">
-        <navigator url="../details/details?fir_ord={{good.fir_ord}}&sec_ord={{good.sec_ord}}&sec_ord={{good.sec_ord}}&good_ord={{good.good_ord}}">
-          <image mode="widthFix" src="{{good.url}}" class="good-img"></image>
-          <text class="good-name">{{good.name}}</text>
-          <text class="good-dec">{{good.dec}}</text>
-          <text class="good-price bg_color">价格：{{good.price}}</text>
+      <view wx:for="{{products}}" class="good">
+        <navigator url="details/details?id={{item.id}}">
+          <image mode="widthFix" src="{{item.doc_image}}" class="good-img"></image>
+          <text class="good-name">{{item.title}}</text>
+          <text class="good-dec">{{item.intro}}</text>
+          <text class="good-price bg_color">价格：{{item.price}}</text>
         </navigator>
       </view>
     </view>
   </view>
-
-
-
-
-
-
-
-  <!--<view class="categroy-left">
-    <view wx:for="{{category}}" wx:key="index" data-id="{{item.id}}" data-index="{{index}}" bindtap="switchTab" class="cate-list {{curIndex === index?'on':''}}">{{item.name}}</view>
-  </view>
-
-  <scroll-view class="categroy-right" scroll-y="{{isScroll}}" scroll-into-view="{{toView}}" scroll-with-animation="true">
-    <block wx:for="{{detail}}" wx:for-index wx:key="idx">
-      <view id="{{item.id}}" class="cate-box">
-        <view class="cate-banner">
-          <image src="{{item.banner}}"></image>
-        </view>
-        <view class="cate-title">
-          <text>{{item.cate}}</text>
-        </view>
-        <view class="product">
-          <view class="product-list" wx:for="{{item.detail}}" wx:key="index" wx:for-item="val">
-            <navigator url="../list/list">
-              <image src="{{val.thumb}}"></image>
-              <view class="classname">
-                <text>{{val.name}}</text>
-              </view>
-            </navigator>
-          </view>
-        </view>
-      </view>
-    </block>
-  </scroll-view>-->
-
 </view>
