--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,5 @@
 /**app.wxss**/
+@import 'pages/common/prompt.wxss';
 page {
   background-color: #F8F8F8;
   height: 100%;
@@ -24,6 +25,25 @@ page {
 }
 .fl{float: left;}
 .fr{float: right;}
+.tooLong{
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis;
+}
+.smallImg{
+  width:100%;
+  height:136px;
+  background-color:#eee;
+}
+.smallFoodContainer{
+  height: 205px;
+  overflow: hidden;
+}
+.bigImg{
+  width: 100%;
+  height: 320px;
+  background-color:#eee;
+}
 /* page */
 .container {
   display: flex;
