--- a/pages/component/details/details.wxml
+++ b/pages/component/details/details.wxml
@@ -37,21 +37,30 @@
                 <template is="wxParse" data="{{wxParseData:detail_desc.nodes}}" />
               </scroll-view>
             </view>
-            <view class="foot-dec_detail">
+            <!-- <view class="foot-dec_detail">
               <text>产品参数</text>
               <view class="dec_detail-all">
                 <text wx:for="{{food.dec_detail}}" class="dec_detail">{{index}}:{{item}}</text>
               </view>
-            </view>
+            </view> -->
           </view>
         </view>
         <view class="good-rating" wx:if = "{{curIndex==1? true : false}}" bindtouchstart="oTs" bindtouchend="oTe">
           <view class="good-rating-content">
           <view class="good-rating-list" wx:if="{{tradeRate.length>0}}">
-            <view class="good-rating" wx:for="{{tradeRate}}">
-              <text>{{item.content}}</text>
-              <text>{{item.created}}</text>
-              <text>{{item.usernick}}</text>
+            <view class="good-rating-detail" wx:for="{{tradeRate}}">
+              <view>
+                <text class="fl">{{item.usernick}}</text>
+                <text class="fr">{{item.created}}</text>
+              </view>
+              <text style="display:block;">{{item.content}}</text>
+            </view>
+            <view class="good-rating-detail" wx:for="{{tradeRate}}">
+              <view style="height:25px;">
+                <text class="fl">{{item.usernick}}</text>
+                <text class="fr">{{item.created}}</text>
+              </view>
+              <text style="display:block;">{{item.content}}</text>
             </view>
           </view>
             <text class="good-rating-list" wx:else>暂无评价信息</text>
@@ -86,18 +95,20 @@
             <text class="good-rating-last">总共<text>{{salesRecords.length}}</text>条记录</text>
           </view>
         </view>
-        <view class="good-ans" wx:if = "{{curIndex==3? true : false}}" bindtouchstart="oTs" bindtouchend="oTe">
-          <view class="good-ans-content good-rating-content">
-            <view class="good-ans-list">
-              <view class="good-ans" wx:for="{{productMessage}}">
-                <text>{{item.content}}</text>
-                <text>{{item.created}}</text>
-                <text>{{item.goumairen}}</text>
+        <view class="good-rating" wx:if = "{{curIndex==3? true : false}}" bindtouchstart="oTs" bindtouchend="oTe">
+          <view class="good-rating-content">
+          <view class="good-rating-list" wx:if="{{productMessage.length>0}}">
+            <view class="good-rating-detail" wx:for="{{productMessage}}">
+              <view>
+                <text class="fl">{{item.goumairen}}</text>
+                <text class="fr">{{item.created}}</text>
               </view>
-              <text class="good-ans-jl">总共<text>{{productMessage.length}}</text>条记录</text>
-              <text class="good-ans-tw">我要提问</text>
+              <text style="display:block;">{{item.content}}</text>
             </view>
-            <text class="good-rating-list" wx:if = "{{productMessage.length == 0}}">暂无评价信息</text>
+          </view>
+            <text class="good-rating-list" wx:else>暂无评价信息</text>
+            
+            <text class="good-rating-last">总共<text>{{productMessage.length}}</text>条记录</text>
           </view>
         </view>
     </view>
