--- a/pages/component/index.wxml
+++ b/pages/component/index.wxml
@@ -14,8 +14,8 @@
     <text class="fubiao color">全网NO1</text>
     <text class="title">销量领先</text>
     <view class="recom-top">
-      <navigator wx:for="{{index_middle_img}}" url="{{item.url}}">
-        <image mode="aspectFit" src="{{item.src}}"></image>
+      <navigator wx:for="{{index_middle_img}}" url="details/details">
+        <image mode="aspectFit" src="{{item}}"></image>
       </navigator>
     </view>
     <view class="recom-bottom" bindtap="toCategory">
