--- a/app.wxss
+++ b/app.wxss
@@ -5,17 +5,20 @@ page {
   height: 100%;
   font-size: 32rpx;
   line-height: 1.6;
+  color: #383838;
+  
 }
 /* lib */
+.border-color{border-color:#898989;} 
 .strong{
   font-weight: bold;
 }
 .tc{
   text-align: center;
 }
-.color{ color: #BF2D2D;}
-.bor_color{border-color: #BF2D2D }
-.bg_color{background-color: #BF2D2D;color:#fff;}
+.color{ color: #c71f3b;}
+.bor_color{border-color: #c71f3b }
+.bg_color{background-color: #c71f3b;color:#fff;}
 .small_font{font-size: 26rpx;}
 .medium_font{
   font-size: 28rpx;
@@ -30,19 +33,29 @@ page {
   overflow:hidden;
   text-overflow:ellipsis;
 }
+/*.smallImg{
+  width:100%;
+  height:370rpx;
+  background-color:#eee;
+}*/
 .smallImg{
   width:100%;
-  height:136px;
+  height:357rpx;
   background-color:#eee;
 }
+/*.smallFoodContainer{
+  height: 510rpx;
+  overflow: hidden;
+}*/
 .smallFoodContainer{
-  height: 205px;
+  height: 470rpx;
   overflow: hidden;
 }
 .bigImg{
-  width: 100%;
-  height: 320px;
-  background-color:#eee;
+  width: 550rpx;
+  height: 550rpx;
+  display: block;
+  margin: 0 auto 10rpx auto;
 }
 /* page */
 .container {
@@ -51,30 +64,39 @@ page {
   min-height: 100%;
   justify-content: space-between;
   font-size: 32rpx;
+  color: #383838;
   font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
 }
 .topbar {
   padding: 30rpx 20rpx;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  flex-wrap: nowrap;
+  justify-content:space-between;
+  align-items: center;
 }
 .topbar image {
-  width: 110px;
-  height: 81px;
+  width: 180rpx;
+  height: 150rpx;
+}
+.top-tele image{
+  width: 100rpx;
+  height: 100rpx;
 }
 .topbar text {
   display: block;
-  font-size: 50rpx;
-  color: rgb(199, 31, 59);
   font-weight: bold;
-  text-align: right;
-  padding-top: 20rpx;
 }
-.topbar text:last-child {
-  font-size: 30rpx;
-  color:#000;
-  padding-top: 0;
+.topbar>text{
+  font-size: 45rpx;
+}
+.top-tele{
+  display: flex;
+  flex-direction: row;
+}
+.top-tele view text:first-child{
+  color: #959595;
+  margin-top: 10rpx;
 }
 .c-minheight {
   min-height: 80px;
@@ -145,3 +167,61 @@ page {
 .wx-view_JjAvLE{display: flex; flex-direction: column; align-items: center; }
 .wx-navigator_91rIxS{padding-top: 8px; padding-bottom: 8px; border-width: 1px; border-style: solid; border-radius: 30px; text-align: center; color: rgb(0, 133, 255); border-color: rgb(0, 133, 255); font-size: 16px; width: 50%; margin-bottom: 10px; }
 
+
+
+
+/*产品列表样式*/
+.product-nav{
+  width: 49.5%;
+  border: 1rpx solid #f0eeee;
+  box-sizing: border-box;
+  display: inline-block;
+  margin-right: 1%;
+  margin-bottom: 10rpx;
+  overflow: hidden;
+  position: relative;
+}
+.product-nav:nth-child(even){
+  margin-right: 0;
+}
+.product-nav:hover{
+  border-color: #c71f3b;
+}
+.products text{
+  display: block;
+  text-align: left;
+  font-size: 26rpx;
+  padding-top: 6rpx;
+  padding-left: 10rpx;
+}
+.product-name{
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis;
+}
+.product-price{
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 5rpx 10rpx;
+}
+.product-dec{
+  color:#707070;
+  padding-bottom:10rpx;
+  width:100%;
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis;
+}
+
+
+
+.product-nav2{
+  background-color: rgb(90, 90, 90);
+}
+.product-nav2 .product-name{
+  color: #fff;
+}
+.product-nav2 .product-dec{
+  color: #777;
+}
