--- a/pages/component/address/address.wxml
+++ b/pages/component/address/address.wxml
@@ -5,7 +5,7 @@
             <input type="number" value="{{address.phone}}" placeholder="电话号码" bindinput="bindPhone" />
             <input value="{{address.detail}}" placeholder="详细地址" bindinput="bindDetail" class="address"/>
             <!--<view class="address-btn bg_color medium_font">获取地址</view>-->
-            <button form-type="submit">保存</button>
+            <button form-type="submit" class="bg_color">保存</button><button bindtap="toBack">取消</button>
         </form>
     </view>
 </view>
