--- a/pages/component/index.wxml
+++ b/pages/component/index.wxml
@@ -1,4 +1,5 @@
 <import src="../common/nav.wxml" />
+<import src="../common/productList.wxml" />
 <view class="main">
   <template is="nav" data="{{website_name}}" />
   <view class="index-top">
@@ -11,8 +12,7 @@
     </swiper>
   </view>
   <view class="recom">
-    <text class="fubiao color">全网NO1</text>
-    <text class="title">销量领先</text>
+    <view class="title"><text class="color">TOP</text>热销产品</view>
     <view class="recom-top">
       <navigator wx:for="{{index_middle_img}}" url="{{item.url}}">
         <image mode="aspectFit" src="{{item.src}}"></image>
@@ -22,21 +22,11 @@
       <image mode="widthFix" src="{{index_middle2_img}}"></image>
       <view class="recom-bottom-list medium_font bg_color">马上抢购</view>
     </view>
-    <!-- <template is="pmd" data="{{pmdAll}}" /> -->
-    <!--<view class="recom-slider">
-      <swiper indicator-dots="false" autoplay="true" interval="{{interval}}" duration="{{duration}}" circular="true">
-        <block wx:for="{{imgUrls}}" wx:key="{{index}}">
-          <swiper-item>
-            <image mode="widthFix" src="{{item}}" class="slide-image" />
-          </swiper-item>
-        </block>
-      </swiper>
-    </view>-->
   </view>
 
   <view class="goodsxx">
     <view class="goodsxx-bt">
-      <text class="title">产品列表</text>
+      <view class="title">产品展示</view>
       <view class="subtit_cate">
         <navigator url="url">开心果</navigator>
         <navigator url="url">点心面</navigator>
@@ -46,13 +36,7 @@
       </view>
     </view>
     <view class="good-lb">
-      <block wx:for="{{products}}" wx:key="{{index}}">
-        <navigator url="details/details?id={{item.id}}" class="good-nav smallFoodContainer">
-          <image mode="aspectFit" class="good-img smallImg" src="{{item.doc_image}}"/>
-          <text class="good-name color">{{item.title}}</text>
-          <text class="good-dec">{{item.intro}}</text>
-        </navigator>
-      </block>
+      <template is="product_list" data="{{products}}" />
       <view class="load_more" bindtap="load_more">加载更多</view>
     </view>
   </view>
