--- a/pages/component/index.wxss
+++ b/pages/component/index.wxss
@@ -1,55 +1,18 @@
-/*@import '../common/common.wxss';*/
-
-
-
 .title{
-  display: block;
-  text-align: left !important;
-  /*font-size: 32rpx;*/
+  text-align: left ;
   padding-left: 15rpx;
-  color: rgb(199, 31, 59);
-  border-bottom: 1rpx dotted rgb(199, 31, 59);
+  font-size: 34rpx;
+}
+.title text{
+  font-weight: bold;
+  padding-right: 6rpx;
 }
 .good-lb{
   padding: 20rpx 0;
 }
-.good-nav{
-  width: 49.5%;
-  padding: 10rpx;
-  border: 8rpx solid #f0eeee;
-  box-sizing: border-box;
-  display: inline-block;
-  margin-right: 1%;
-  margin-bottom: 10rpx;
-  overflow: hidden;
-}
-.good-nav:nth-child(even){
-  margin-right: 0;
-}
-.good-nav:hover{
-  border-color: rgb(199, 31, 59);
-}
-.good-lb text{
-  display: block;
-  text-align: left;
-  font-size: 26rpx;
-  padding-top: 6rpx;
-}
-.good-name{
-  white-space:nowrap;
-  overflow:hidden;
-  text-overflow:ellipsis;
-}
-.good-dec{
-  color:#8c8c8c;
-  padding-bottom:10rpx;
-  width:100%;
-  white-space:nowrap;
-  overflow:hidden;
-  text-overflow:ellipsis;
-}
 
-.main{text-align: center;margin: 0 10rpx}
+
+.main{text-align: center;margin: 0 10rpx;}
 swiper {
     width: 100%;
     height: 500rpx;
@@ -79,16 +42,6 @@ swiper-item image {
   width: 200rpx;
   border-radius: 20rpx;
   margin: 0 auto;
-}
-
-
-.recom text{
-  text-align: left;
-  display: block;
-}
-.recom .subtitle{
-  font-size: 24rpx;
-  padding-left: 15rpx;
 }
 .recom-top{
   width: 100%;
