--- a/pages/component/login/login.wxml
+++ b/pages/component/login/login.wxml
@@ -1,18 +1,15 @@
 <view class="container">
   <view class="loginbox">
     <view class="usermotto">
-      <text class="user-motto">{{motto}}</text>
-      <view class="cp-input">
-        <view class="inline-block">
-          <image src="/image/sno.png" class="loginicon"></image>
-          <input type="text" bindinput="userNameInput" style="float:right;" placeholder="请输入帐号" />
-        </view>
-        <view>
-          <image src="/image/pasw.png" class="loginicon"></image>
-          <input type="text" bindinput="userPasswordInput" password="true" style="float:right;" placeholder="请输入密码" />
-        </view>
-        <button bindtap="logIn">确认绑定</button>
+      <view class="inline-block">
+        <image src="/image/sno.png" class="loginicon"></image>
+        <input type="text" bindinput="userNameInput" placeholder="请输入帐号" />
       </view>
+      <view class="inline-block" style="border-top:none;">
+        <image src="/image/pasw.png" class="loginicon"></image>
+        <input type="text" bindinput="userPasswordInput" password="true"  placeholder="请输入密码" />
+      </view>
+      <button bindtap="logIn" class="bg_color">确认绑定</button>
     </view>
   </view>
 </view>
