--- a/pages/component/login/login.wxss
+++ b/pages/component/login/login.wxss
@@ -1,8 +1,8 @@
-page {
+/*page {
   height: 100%;
   opacity: 0.9;
-}
-.container {
+}*/
+/*.container {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -59,7 +59,6 @@ page {
 
 .usermotto .cp-input {
   padding: 30px 25px;
-  /*border: 3px solid orange;*/
 }
 
 .usermotto button {
@@ -74,7 +73,6 @@ page {
 .loginbox {
   background-color: #fff;
   padding: 10px 10px;
-  /*border: 1px solid #aaa;*/
 }
 
 .loginicon {
@@ -84,4 +82,38 @@ page {
 }
 .inline-block{
   display: inline-block;
+}*/
+
+.container {
+  height: 100%;
+  width: 100%;
+} 
+.loginbox{
+  margin-top: 12rpx;
+}
+.inline-block{
+  width: 100%;
+  height:90rpx;
+  /*line-height: 90rpx;*/
+  border-top: 1rpx solid #ddd;
+  border-bottom: 1rpx solid #ddd;
+  overflow: hidden;
+  padding-left: 30rpx;
+}
+
+.inline-block image{
+  display: inline-block;
+  width:40rpx;
+  height: 40rpx; 
+  line-height: 90rpx;
+  vertical-align: 30rpx;
+  margin-right: 20rpx;
+}
+.inline-block input{
+  display: inline-block;
+  height: 90rpx;
+}
+.usermotto button{
+  width: 90%;
+  margin: 20rpx auto;
 }
