--- a/pages/component/order_detail/order_detail.wxss
+++ b/pages/component/order_detail/order_detail.wxss
@@ -1,4 +1,4 @@
-/* order_confirm.wxss */
+
 .small{
   font-size: 26rpx;
 }
@@ -7,7 +7,6 @@
 }
 .main{
   background-color: #ededed;
-  padding-bottom: 100rpx;
 }
 .confirm-box{
     color: #999;
@@ -16,47 +15,6 @@
     padding-left: 30rpx;
     padding-right: 30rpx;
     border-bottom: 20rpx solid #ededed;
-}
-.orders{
-    height: 90rpx;
-    line-height: 90rpx;
-    border-bottom: 1rpx solid #e9e9e9;
-    text-align: center;
-}
-
-.orders-number{
-    height: 90rpx;
-    line-height: 90rpx;
-    border-bottom: 1rpx solid #e9e9e9;
-}
-.orders-detail{
-    position: relative;
-    height: 120rpx;
-    padding: 35rpx 20rpx 35rpx 170rpx;
-    border-bottom: 1rpx solid #e9e9e9;
-}
-.orders-detail image{
-    position: absolute;
-    left: 0;
-    top: 20rpx;
-    width: 150rpx;
-    height: 150rpx;
-}
-.orders-detail view{
-    line-height: 60rpx;
-}
-.orders-detail .orders-status{
-    position: absolute;
-    right: 20rpx;
-    top: 35rpx;
-    height: 120rpx;
-    line-height: 120rpx;
-    color: #b42f2d;
-}
-.orders-footer{
-    height: 60rpx;
-    line-height: 60rpx;
-    padding:15rpx 20rpx 15rpx 0;
 }
 
 .delivery-top{
@@ -67,18 +25,7 @@
   text-align:center;
   padding-right:38rpx;
 }
-.delivery-top::after{
-  position:absolute;
-  right:20rpx;
-  top:34rpx;
-  content:'';
-  width:16rpx;
-  height:16rpx;
-  border-top:4rpx solid #999;
-  border-right:4rpx solid #999;
-  -webkit-transform:rotate(45deg);
-  transform:rotate(45deg);
-}
+
 .delivery-middle{
   height: 200rpx;
 }
@@ -186,26 +133,67 @@
 
 
 
-
-
-
-
-
-.confirm-footer{
-  position:fixed;
-  bottom:0;
-  left:0;
-  width:100%;
-  height:90rpx;
-  line-height:90rpx;
-  padding:0 0rpx 0 30rpx;
-  box-sizing:border-box;
-  background:#fff;
-  display:flex;
-  flex-direction:row;
-  justify-content:space-between;
+.orders-box{
+    color: #999;
+    font-size: 28rpx;
 }
-.confirm-pay{
-  padding-left: 25rpx;
-  padding-right: 25rpx;
+.orders{
+    height: 90rpx;
+    line-height: 90rpx;
+    border-bottom: 1rpx solid #e9e9e9;
+    text-align: center;
+}
+.orders-list{
+    padding-left: 30rpx;
+    border-bottom: 20rpx solid #ededed;
+}
+.orders-list:last-child{
+    border-bottom: 0;
+}
+.orders-number{
+    height: 90rpx;
+    line-height: 90rpx;
+    border-bottom: 1rpx solid #e9e9e9;
+}
+.orders-detail{
+    position: relative;
+    height: 120rpx;
+    padding: 35rpx 20rpx 35rpx 170rpx;
+    border-bottom: 1rpx solid #e9e9e9;
+}
+.orders-detail image{
+    position: absolute;
+    left: 0;
+    top: 20rpx;
+    width: 150rpx;
+    height: 150rpx;
+}
+.orders-detail view{
+    line-height: 60rpx;
+}
+.orders-detail .orders-status{
+    position: absolute;
+    right: 20rpx;
+    top: 35rpx;
+    height: 120rpx;
+    line-height: 120rpx;
+    color: #b42f2d;
+}
+.orders-footer{
+    height: 60rpx;
+    line-height: 60rpx;
+    color: #2f2f2f;
+    padding:15rpx 0rpx 15rpx 0;
+}
+.orders-footer .orders-btn{
+    float: right;
+    width: 170rpx;
+    height: 60rpx;
+    line-height:60rpx;
+    border-radius: 6rpx;
+    background: #b42f2d;
+    color: #fff;
+    text-align: center;
+    font-size: 26rpx;
+    /*display: inline-block;*/
 }
