--- a/pages/component/user/user.wxss
+++ b/pages/component/user/user.wxss
@@ -5,7 +5,7 @@
     height: 220rpx;
     padding:30rpx 30rpx 30rpx 30rpx;
     box-sizing: border-box;
-    background: #AB956D;
+    background: #c71f3b;
     font-size: 28rpx;
     color: #fff;
     text-align: center;
@@ -21,7 +21,11 @@
 .header .about{
     float: right;
 }
-
+.header .account_money{
+    position: absolute;
+    right: 20rpx;
+    top: 15rpx;
+}
 .address-box{
     border-bottom: 20rpx solid #ededed;
     color: #999;
