--- a/pages/common/nav.wxml
+++ b/pages/common/nav.wxml
@@ -1,9 +1,9 @@
 <template name="nav">
     <view class="topbar">
-      <image mode="aspectFit" src="/image/nav.png"></image>
+      <image mode="aspectFit" src="{{config.logo}}"></image>
       <view class="classname">
         <text>MOUMOU SNACK FOOD</text>
-        <text>{{website_name}}</text>
+        <text>{{config.website_name}}</text>
       </view>
     </view>
 </template>
