--- a/pages/component/category/category.wxml
+++ b/pages/component/category/category.wxml
@@ -1,7 +1,7 @@
 <import src="../../common/nav.wxml" />
 <import src="../../common/prompt.wxml" />
 <view class="main">
-  <template is="nav" data="{{website_name}}" />
+  <template is="nav" data="{{config}}" />
   <view class="categroy-top bg_color">
     <view class="categroy-fir-list" wx:for="{{goods}}" wx:for-item="first_level"  data-index="{{index}}">
       <view class="categroy-fir-list-name">
