--- a/pages/component/cart/cart.wxml
+++ b/pages/component/cart/cart.wxml
@@ -1,6 +1,11 @@
 <import src="../../common/prompt.wxml" />
 <view class="main">
     <view wx:if="{{foods.length}}">
+        <view class="cart-top">
+            <icon wx:if="{{selectAllStatus}}" type="success" color="#c71f3b" class="total-select  cart-pro-select-top" bindtap="selectAll"/>
+            <icon wx:else type="circle" class="total-select  cart-pro-select-top" bindtap="selectAll"/>
+            <text class="cart-top-tex">某某商城</text>
+        </view>
         <view class="cart-box">
             <view class="cart-list" wx:for="{{foods}}" wx:key="{{index}}">
                 <icon wx:if="{{item.selected}}" type="success" color="#c71f3b" data-index="{{index}}"  class="cart-pro-select" bindtap="selectList"/>
@@ -21,15 +26,17 @@
         <view class="cart-footer">
             <icon wx:if="{{selectAllStatus}}" type="success" color="#c71f3b" class="total-select" bindtap="selectAll"/>
             <icon wx:else type="circle" class="total-select" bindtap="selectAll"/>
-            <text class="cart-toatl-tex">全选</text>
-            <text class="cart-toatl-price">总共:<text>￥{{totalPrice}}</text><text>不含运费</text></text>
-            <text wx:if="{{jsStatus}}" class="cart-toatl-qjs cart-toatl-js" bindtap="toConfirm">去结算<text>({{totleNum}})</text></text>
-            <text wx:else class="cart-toatl-qjs">请选购</text>
+            <text class="cart-toatl-tex fl">全选</text>
+            
+            <text class="cart-toatl-qjs cart-toatl-js fr" bindtap="toConfirm">去结算<text>({{totleNum}})</text></text>
+            <!--<text wx:else class="cart-toatl-qjs fr">请选购</text>-->
+            <view class="cart-toatl-js-price fr">
+                <view class="cart-toatl-price">合计:<text class="color">￥{{totalPrice}}</text></view>
+                <view class="cart-toatl-addPri">不含运费</view>
+            </view>
         </view>
     </view>
     
-    <!-- <view wx:else>
-        <view class="cart-no-data">购物车是空的哦~</view>
-    </view> -->
+
 </view>
 <template is="prompt" data="{{prompt}}"></template>
