--- a/pages/component/user/user.wxss
+++ b/pages/component/user/user.wxss
@@ -2,30 +2,67 @@
 
 .header{
     position: relative;
-    height: 220rpx;
-    padding:30rpx 30rpx 30rpx 30rpx;
+    height: 292rpx;
     box-sizing: border-box;
     background: #c71f3b;
     font-size: 28rpx;
     color: #fff;
-    text-align: center;
+}
+.header-top{
+  padding:30rpx 30rpx 30rpx 30rpx;
+}
+.header-title{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 .header .thumb{
-    width: 100rpx;
-    height: 100rpx;
+    width: 150rpx;
+    height: 150rpx;
     border-radius: 50%;
-}
-.header text{
-  display: block;
-}
-.header .about{
-    float: right;
+    margin-right: 30rpx;
 }
 .header .account_money{
     position: absolute;
-    right: 20rpx;
-    top: 15rpx;
+    right: 0rpx;
+    top: 60rpx;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 70rpx;
+    border-top-left-radius: 35rpx;
+    border-bottom-left-radius: 35rpx;
+    padding: 0 30rpx 0 40rpx;
+    background-color: #f39800;
 }
+.header .account_money image{
+  width: 40rpx;
+  display: inline-block;
+  margin-right: 8rpx;
+}
+.header .account_money text{
+  display: inline-block;
+}
+
+.header-bottom{
+  display: flex;
+  flex-direction: row;
+  height: 80rpx;
+  color: #fff;
+  border-top: 1rpx solid #f75772;
+}
+.header-bottom view{
+  padding: 4rpx 0;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.header-bottom view:first-child{
+  border-right: 1rpx solid #f75772;
+}
+
 .address-box{
     border-bottom: 20rpx solid #ededed;
     color: #999;
@@ -36,7 +73,7 @@
     position: relative;
     height: 90rpx;
     border-bottom: 1rpx solid #e9e9e9;
-    text-align: center;
+    padding-left: 40rpx;
 }
 .address-box .address-manage::after{
     position: absolute;
@@ -66,11 +103,24 @@
     font-size: 28rpx;
 }
 .orders{
+    position: relative;
     height: 90rpx;
     line-height: 90rpx;
     border-bottom: 1rpx solid #e9e9e9;
     text-align: center;
 }
+/* .orders::after{
+    position: absolute;
+    right: 30rpx;
+    top: 34rpx;
+    content: '';
+    width: 16rpx;
+    height: 16rpx;
+    border-top: 4rpx solid #7f7f7f;
+    border-right: 4rpx solid #7f7f7f;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+} */
 .orders-list{
     padding-left: 30rpx;
     border-bottom: 20rpx solid #ededed;
