--- a/pages/component/login/login.wxml
+++ b/pages/component/login/login.wxml
@@ -9,7 +9,10 @@
         <image src="/image/pasw.png" class="loginicon"></image>
         <input type="text" bindinput="userPasswordInput" password="true"  placeholder="请输入密码" />
       </view>
-      <button bindtap="logIn" class="bg_color">确认绑定</button>
+      <button bindtap="logIn" class="bg_color">登录</button>
+      <navigator data-c_e_id="wx_navigator44bab4ab" url = "" bindtap="auto_registered">
+          <text data-c_e_id="wx_text403f7ded">微信帐号自动注册</text>
+      </navigator>
     </view>
   </view>
 </view>
