--- a/pages/component/login/login.wxss
+++ b/pages/component/login/login.wxss
@@ -117,3 +117,23 @@
   width: 90%;
   margin: 20rpx auto;
 }
+.usermotto navigator{
+  width: 90%;
+  margin: 20rpx auto;
+  color: #fff;
+  background-color: #898989;
+  position:relative;
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+  padding-left:14px;
+  padding-right:14px;
+  box-sizing:border-box;
+  font-size:18px;
+  text-align:center;
+  text-decoration:none;
+  line-height:2.55555556;
+  border-radius:5px;
+  -webkit-tap-highlight-color:transparent;
+  overflow:hidden;
+}
